--- a/public/css/simple-ajax-search-public.css
+++ b/public/css/simple-ajax-search-public.css
@@ -2,3 +2,81 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+ .pc-custom-check {
+	display: none;
+  }
+  .pc-custom-check + .pc-custom-check-label {
+	/* Unchecked style  */
+	background-color: #ccc;
+	color: #fff;
+	padding: 5px 10px;
+	font-family: sans-serif;
+	cursor: pointer;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+		-ms-user-select: none;
+			user-select: none;
+	border-radius: 4px;
+	display: inline-block;
+	margin: 0 10px 10px 0;
+	-webkit-backface-visibility: hidden;
+			backface-visibility: hidden;
+	transition: all 0.6s ease;
+  }
+  .pc-custom-check:checked + .pc-custom-check-label {
+	/* Checked style  */
+	background-color: #f8931f;
+	-webkit-backface-visibility: hidden;
+			backface-visibility: hidden;
+	-webkit-transform: rotateY(360deg);
+			transform: rotateY(360deg);
+  }
+
+  #category {
+	   margin-top: 20px;
+  }
+
+  #result {
+	   display: flex;
+	  flex-wrap: wrap;
+	   margin-top: 20px;
+  }
+
+  .cat_box {
+	  width: 100%;
+	  border: solid 1px #ccc;
+	  margin-bottom: 20px;
+	  box-shadow: 0 4px 8px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
+	  padding-bottom: 25px;
+  }
+
+  .cat_title {
+	  background: #29aae3;
+	  text-align: center;
+	  color: #fff;
+  }
+
+  .cat_box .row .dashicons {
+	  font-size: 2rem;
+	  margin: 8px 5px 0px 0px;
+  }
+
+  .cat_title p {
+	  padding: 5px 0px 5px 0px;
+  }
+
+  .cat_box .row {
+	  padding: 0px 10px 0px 10px;
+  }
+
+  .cat_box .row a {
+	  font-size: 1.5rem;
+	  color: #333;
+  }
+
+  @media only screen and (min-width: 1000px) {
+	  .cat_box {
+		  width: 45%;
+		  margin: 2.5%;
+	  }
+  }
