--- a/public/css/simple-ajax-search-public.css
+++ b/public/css/simple-ajax-search-public.css
@@ -2,10 +2,10 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
- .pc-custom-check {
+ .sas-custom-check {
 	display: none;
   }
-  .pc-custom-check + .pc-custom-check-label {
+  .sas-custom-check + .sas-custom-check-label {
 	/* Unchecked style  */
 	background-color: #ccc;
 	color: #fff;
@@ -23,7 +23,7 @@
 			backface-visibility: hidden;
 	transition: all 0.6s ease;
   }
-  .pc-custom-check:checked + .pc-custom-check-label {
+  .sas-custom-check:checked + .sas-custom-check-label {
 	/* Checked style  */
 	background-color: #f8931f;
 	-webkit-backface-visibility: hidden;
@@ -32,7 +32,7 @@
 			transform: rotateY(360deg);
   }
 
-  #category {
+  #categories {
 	   margin-top: 20px;
   }
 
